--- a/styles/place-large.css
+++ b/styles/place-large.css
@@ -1,14 +1,15 @@
 :root {
-    --primary-color: #7CA982;
-    --secondary-color: #E0EEC6;
-    --text-color: #243E36;
+    --primary-color: #7FB069;
+    --secondary-color: #D36135;
+    --text-color: black;
+    --background-color: #ECE4B7;
 }
 
 body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    background-color: var(--secondary-color);
+    background-color: var(--background-color);
     color: var(--text-color);
 }
 
@@ -20,35 +21,68 @@ header {
 }
 
 h1 {
-    color: #E0EEC6;
-    background-color: #243E36;
-    text-align: center;
+    color: var(--text-color);
     margin: 0;
     padding: 1rem;
 }
 
-.hero-image {
+.bar {
+    background-color: var(--secondary-color);
+    height: 10px;
     width: 100%;
-    height: auto;
+}
+
+.hero-image {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    z-index: -1;
 }
 
 main {
     display: flex;
-    justify-content: space-between;
-    padding: 1rem;
+    flex-direction: column;
+    align-items: center;
+    position: relative;
+    height: calc(100vh - 4rem); /* Adjust height for header and footer */
 }
 
 .data, .weather {
-    background-color: #ffffff;
+    background-color: rgba(255, 255, 255, 0.5);
     margin: 1rem;
     padding: 1rem;
     border-radius: 8px;
-    width: 20%;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    position: absolute;
 }
 
-.weather-icon::after {
-    content: "⛅";
+.data h2, .weather h2 {
+    background-color: var(--secondary-color);
+    color: white;
+    padding: .5rem;
+    margin-bottom: 0.5rem;
+    
 }
+
+.data {
+    top: 5%;
+    left: 5%;
+    width: calc(20% - 2rem); /* Adjusted width for padding */
+    color: black;
+}
+
+.weather {
+    top: 35%;
+    right: 5%;
+    width: calc(20% - 2rem); /* Adjusted width for padding */
+    color: black;
+}
+
+
+
 
 .label {
     font-weight: bold;
@@ -58,4 +92,10 @@ footer {
     background-color: var(--primary-color);
     text-align: center;
     padding: 1rem;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    z-index: 1; /* Ensure footer is above other content */
+    margin-top: 1rem; /* Add space between footer and weather */
 }
+
