--- a/styles/place-large.css
+++ b/styles/place-large.css
@@ -47,7 +47,7 @@ main {
     flex-direction: column;
     align-items: center;
     position: relative;
-    height: calc(100vh - 4rem); /* Adjust height for header and footer */
+    height: calc(100vh - 4rem);
 }
 
 .data, .weather {
@@ -64,28 +64,33 @@ main {
     color: white;
     padding: .5rem;
     margin-bottom: 0.5rem;
-    
 }
 
 .data {
     top: 5%;
     left: 5%;
-    width: calc(20% - 2rem); /* Adjusted width for padding */
+    width: calc(20% - 2rem);
     color: black;
 }
 
 .weather {
     top: 35%;
     right: 5%;
-    width: calc(20% - 2rem); /* Adjusted width for padding */
+    width: calc(20% - 2rem);
     color: black;
 }
 
-
-
-
 .label {
     font-weight: bold;
+}
+
+.weather-icon {
+    display: inline-block;
+    width: 1em;
+    height: 1em;
+    vertical-align: middle;
+    background: url('../images/weather.svg') no-repeat center center;
+    background-size: contain;
 }
 
 footer {
@@ -95,7 +100,6 @@ footer {
     position: fixed;
     bottom: 0;
     width: 100%;
-    z-index: 1; /* Ensure footer is above other content */
-    margin-top: 1rem; /* Add space between footer and weather */
+    z-index: 1;
+    margin-top: 1rem;
 }
-
