--- a/styles/form.css
+++ b/styles/form.css
@@ -72,25 +72,37 @@ input[type="text"], input[type="date"], textarea, select {
     box-sizing: border-box; /* Ensure padding doesn't affect width */
 }
 
+#featuresFieldset {
+    margin-bottom: 0.5rem; /* Adjust margin bottom for the fieldset */
+}
+
+#featuresFieldset legend {
+    margin-bottom: 0.2rem; /* Reduce margin bottom for the legend */
+}
+
+#featuresFieldset .input-container {
+    margin-top: 0.2rem; /* Reduce margin top for the input container */
+}
+
 fieldset {
     border: none;
     border-radius: 4px;
     padding: 1rem;
-    margin-bottom: 1rem;
+    margin-bottom: 0.2rem;
     display: flex;
     flex-direction: column;
 }
 
 fieldset legend {
-    padding: 0.5rem;
+    padding: 0.2rem 0.5rem;
     font-weight: bold;
-    margin-bottom: 0.5rem;
-    width: auto;
+    margin-bottom: 0.2rem;
+   
 }
 
 fieldset label {
     display: block;
-    margin-bottom: 0.5rem;
+    margin-bottom: 0.2rem;
 }
 
 fieldset:not(:first-of-type) legend::after {
@@ -134,6 +146,11 @@ input[type="submit"]:hover {
     background-color: var(--secondary-color);
     color: #000;
 }
+
+.valid {
+    border-left: 8px solid #28a745; /* Green border */
+}
+
 
 footer {
     background-color: #335c67;
