--- a/styles/form.css
+++ b/styles/form.css
@@ -1,3 +1,10 @@
+/* CSS Reset */
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 /* General and mobile screen styles */
 :root {
     --primary-color: #335c67;
@@ -8,8 +15,6 @@
 
 body {
     font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
     background-color: var(--background-color);
     color: var(--text-color);
 }
@@ -84,32 +89,27 @@ input[type="text"], input[type="date"], textarea, select {
     margin-top: 0.2rem; /* Reduce margin top for the input container */
 }
 
+
 fieldset {
-    border: none;
-    border-radius: 4px;
-    padding: 1rem;
-    margin-bottom: 0.2rem;
+    border: 1px solid #ccc; /* Set the border to match the textarea */
+    padding: 1rem; /* Maintain padding for spacing */
+    margin-bottom: 0.2rem; /* Maintain spacing below fieldsets */
     display: flex;
-    flex-direction: column;
+    flex-direction: column; /* Maintain vertical layout */
 }
 
+
 fieldset legend {
-    padding: 0.2rem 0.5rem;
-    font-weight: bold;
-    margin-bottom: 0.2rem;
-   
+    padding-left: 0; /* Remove padding to align with labels */
+    margin-bottom: 0.2rem; /* Maintain spacing below legend */
 }
+
 
 fieldset label {
     display: block;
     margin-bottom: 0.2rem;
 }
 
-fieldset:not(:first-of-type) legend::after {
-    content: " (Optional)";
-    font-weight: normal;
-    color: #999;
-}
 
 label.inline {
     display: flex;
@@ -120,6 +120,7 @@ label.inline {
 textarea {
     height: 100px;
     resize: vertical;
+    border: 1px solid #ccc; /* Matching border color */
 }
 
 legend {
@@ -152,8 +153,14 @@ input[type="submit"]:hover {
 }
 
 
+small {
+    display: block;
+    margin-top: 0.5rem;
+    color: var(--secondary-color);
+}
+
 footer {
-    background-color: #335c67;
+    background-color: var(--primary-color);
     color: white;
     text-align: center;
     padding: 5px;
