--- a/project/styles/siteplan.css
+++ b/project/styles/siteplan.css
@@ -16,7 +16,7 @@ body {
 
 header {
     background-color: var(--primary-color);
-    color: #fff; 
+    color: #fff;
     padding: 1rem;
     text-align: center;
 }
@@ -24,6 +24,11 @@ header {
 h2, h3 {
     font-family: Georgia, serif;
     color: var(--secondary-color);
+}
+
+h1, h2, h3 {
+    font-family: Georgia, serif;
+    
 }
 
 h1, h2 {
@@ -38,12 +43,6 @@ section {
     margin-bottom: 2rem;
 }
 
-footer {
-    background-color: var(--primary-color);
-    color: #fff;
-    text-align: center;
-    padding: 1rem;
-}
 
 .wireframe-container {
     display: flex;
@@ -75,17 +74,45 @@ footer {
     width: 100px;
     height: 100px;
     border: 1px solid #000;
+}
+
+.color-labels {
     display: flex;
-    justify-content: center;
-    align-items: center;
-    position: relative;
+    justify-content: space-around;
 }
 
 .color-label {
-    position: absolute;
-    bottom: -30px;
-    width: 100%;
     text-align: center;
     font-size: 1rem;
     font-weight: bold;
+    width: 100px; /* Match width with color boxes */
+}
+
+nav ul {
+    list-style: none;
+    padding: 0;
+    display: flex;
+    justify-content: center;
+}
+
+nav ul li {
+    margin: 0 1rem;
+}
+
+nav ul li a {
+    color: #fff;
+    text-decoration: none;
+    transition: color 0.3s;
+}
+
+nav ul li a:hover {
+    color: var(--tertiary-color); /* Use tertiary color on hover */
+}
+
+
+footer {
+    background-color: var(--primary-color);
+    color: #fff;
+    text-align: center;
+    padding: 1rem;
 }
